--- a/main.css
+++ b/main.css
@@ -77,3 +77,20 @@ p {
     padding: 2px;
     border-radius: 4px;
 }
+
+.me {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    background-color: rgb(227, 213, 196);
+    padding: 10px;
+}
+
+.me a{
+    text-decoration: none;
+    display: inline-block;
+    margin-top: 10px;
+    margin-left: 10px;
+    color: rgb(0, 94, 255);
+}
